# tempura

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod  go.sum  justfile
.claude/: CLAUDE.md
.github/actions/environment/: action.yaml
.github/workflows/: go_quality_checks.yaml  python_quality_checks.yaml
cmd/tempura/: main.go
examples/: workflow.py
internal/cli/: root.go  serve.go
sdk/python/: pyproject.toml
sdk/python/src/tempura/: __init__.py  batter.py  constants.py
sdk/python/src/tempura/client/: __init__.py  client.py  models.py
